# CPU_Raytracer

./: .gitignore  CMakeList.txt  CMakeLists.txt  README-copy.md  README.md
CPU Raytracer/: CMakeList.txt  CPU_Raytracer.sln
CPU Raytracer/CPU Raytracer/: CPU Raytracer.vcxproj  CPU Raytracer.vcxproj.filters
CPU Raytracer/CPU Raytracer/include/: platform_macros.h
CPU Raytracer/CPU Raytracer/include/CPU Raytracer/: CPU_Raytracer.h
CPU Raytracer/CPU Raytracer/include/CPU Raytracer/util/: hittable_list.h  interval.h  ray.h
CPU Raytracer/CPU Raytracer/include/CPU_Raytracer/: CPU_Raytracer.h
CPU Raytracer/CPU Raytracer/include/CPU_Raytracer/util/: aabb.h  constants.h  hittable.h  interval.h  material.h  rtw_stb_image.h  sphere.h  texture.h  vec3.h
CPU Raytracer/CPU Raytracer/res/: image.ppm
CPU Raytracer/CPU Raytracer/res/output/: image.ppm
CPU Raytracer/CPU Raytracer/src/: main.cpp
CPU Raytracer/CPU Raytracer/src/CPU Raytracer/: CPU_Raytracer.cpp
CPU Raytracer/CPU Raytracer/src/CPU_Raytracer/: CPU_Raytracer.cpp  stb_image_impl.cpp  stbi_write.cpp
CPU Raytracer/CPU Raytracer/x64/Debug/: CPU Raytracer.exe.recipe  CPU Raytracer.ilk  interval.h.h_BE2F7973CAD05C27.ifc.dt.d.json  interval.h.h_BE2F7973CAD05C27.ifc.dt.module.json  interval.h.h_BE2F7973CAD05C27.ifc.dt.module.json.command  interval.h.ifc  interval.h.ifc.d.json  interval.h.module.json  interval.h_E0B496CC4C770279.ifc.dt.module.json  interval.h_E0B496CC4C770279.ifc.dt.module.json.command  vc143.idb
CPU Raytracer/CPU Raytracer/x64/Debug/CPU Raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPU Raytracer.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CPU Raytracer/CPU Raytracer/x64/Debug/CPU Raytracer_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
CPU_Raytracer/CPU_Raytracer/: CPU Raytracer.vcxproj.filters
CPU_Raytracer/CPU_Raytracer/include/CPU_Raytracer/: CPU_Raytracer.h  thread_pool.h
CPU_Raytracer/CPU_Raytracer/include/CPU_Raytracer/util/: bvh.h  camera.h  hittable.h  sphere.h
CPU_Raytracer/CPU_Raytracer/src/: main.cpp
CPU_Raytracer/CPU_Raytracer/src/CPU_Raytracer/: thread_pool.cpp
include/CPU_Raytracer/: CPU_Raytracer.h
include/CPU_Raytracer/util/: camera.h  color.h  ray.h  rtwk.h  texture.h
src/: main.cpp
src/CPU_Raytracer/: CPU_Raytracer.cpp  stb_image_write_impl.cpp
